--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@types/node": "^24.0.12",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "^4.9.5",
+    "typescript-eslint": "^8.36.0"
   }
 }
