--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.0.12",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^9.30.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.3.0",
@@ -21,5 +22,8 @@
     "tsx": "^4.20.3",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.36.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
