--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
+    "prisma": "^6.11.1",
     "tsx": "^4.20.3",
-    "typescript": "^4.9.5",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.36.0"
   },
   "dependencies": {
